<resources>
    <string name="app_name">School Helper</string>
    <string name="title_activity_welcome">Chào mừng</string>

    <string name="next">Tiếp tục</string>
    <string name="skip">Bỏ qua</string>
    <string name="start">Đăng nhập</string>

    <string name="slide_1_title">SCHOOL HELPER</string>
    <string name="slide_1_desc">Help all student!</string>

    <string name="slide_2_title">Tìm mọi thứ bạn cần</string>
    <string name="slide_2_desc">Chúng tôi giúp bạn có thể tìm được nhà trọ, khu ăn uống, việc làm nhanh nhất</string>

    <string name="slide_3_title">Quán lý thông tin</string>
    <string name="slide_3_desc">Truy cập thông tin nhanh chóng!</string>

    <string name="slide_4_title">CÙNG KHÁM PHÁ</string>
    <string name="slide_4_desc">Cùng khám phá ứng dụng nhé!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="login_lbl_user_name">User name</string>
    <string name="hint_password">**********</string>
    <string name="hint_email">ndttam.dev@gmail.com</string>
    <string name="login">Login</string>
    <string name="forgotpassword"><i><u>Forgot password ?</u></i></string>
    <string name="txtSize_forgot">14sp</string>
    <string name="login_lbl_pass">Password</string>
    <string name="forgot_label_text"><b>Please type your email and press submit button</b></string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="author_name">NGUYEN XUAN KIEN</string>
    <string name="home_label_block">Block:  </string>
    <string name="home_label_default_block">  FALL 2018</string>
    <string name="home_label_course">Course:  </string>
    <string name="home_label_default_course">  12.3v2</string>
    <string name="info">INFO</string>
    <string name="contact">CONTACT</string>
    <string name="service">SERVICE</string>
    <string name="news">NEWS</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="contact_title">Please type your mind into form</string>
    <string name="contact_lbl_title">Title</string>
    <string name="contact_lbl_content">Content</string>
    <string name="contact_hint_title">Your mind .....</string>
    <string name="contact_hint_content">...........</string>
    <string name="service_floatBtn_main">Please choose a service</string>
    <string name="service_floatBtn_home">Home</string>
    <string name="service_floatBtn_food">Food</string>
    <string name="service_floatBtn_works">Works</string>
    <string name="current_block">FALL 2018</string>
    <string name="user_code">PS05854</string>
    <string name="user_course">12.3v1</string>
    <string name="card_view_lbl">Label</string>
    <string name="lable_block">Block: </string>
    <string name="user_status">HDI</string>
    <string name="current_phone">0873456734</string>
    <string name="current_email">abc234234234234@mail.com</string>
    <string name="lable_code">Code: </string>
    <string name="lable_course">Course: </string>
    <string name="lable_status">Status: </string>
    <string name="lable_mail">Email:</string>
    <string name="lable_address">Address:</string>
    <string name="current_address">Tam Phuoc, Long Thanh, Dong Nai</string>
    <string name="lable_specialized">Specialized:</string>
    <string name="lable_start">Start:</string>
    <string name="current_start">20/09/2016</string>
    <string name="lable_phone">Phone:</string>
    <string name="home_label_default_code">Code:</string>
</resources>
