<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/forgotpass_toolbar"
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:popupTheme="@style/AppTheme"
        app:theme="@style/AppTheme" />
    <!--Logo-->
    <ImageView
        android:layout_width="@dimen/forgot_logo_width"
        android:layout_height="@dimen/forgot_logo_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/forgot_imgLogo_mrgTop"
        android:src="@drawable/ic_school" />

    <TextView
        android:layout_width="@dimen/forgot_title_width"
        android:layout_height="@dimen/forgot_title_height"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/forgot_label_text"
        android:textColor="@color/black"
        android:textSize="@dimen/forgot_txtLabel" />

    <EditText
        android:id="@+id/forgot_edt_email"
        android:layout_width="@dimen/all_activity_edt_width"
        android:layout_height="@dimen/all_activity_edt_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/forgot_mrgtop_edt"
        android:background="@drawable/custom_edt_login"
        android:hint="@string/hint_email"
        android:paddingLeft="@dimen/all_activity_edt_paddingLeft"
        android:paddingRight="@dimen/all_activity_edt_paddingRight" />

    <Button
        android:id="@+id/forgot_btn_submit"
        android:layout_width="@dimen/all_activity_btn_width"
        android:layout_height="@dimen/all_activity_btn_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/forgot_mrgTop_btn"
        android:background="@drawable/custom_btn"
        android:text="@string/submit"
        android:textColor="@color/backgroundColor"
        android:textSize="@dimen/all_txtSize_btn" />
</LinearLayout>