<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/backgroundColor"
    tools:context=".HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <ImageView
            android:layout_margin="5dp"
            android:src="@drawable/logofpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <!--View basic informations-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3.5"
        android:weightSum="6"
        android:paddingBottom="@dimen/home_paddingBottom_viewInformation">
        <!--Show user's name -->
        <TextView
            android:id="@+id/home_lbl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="22"
            android:maxLines="1"
            android:text="@string/author_name"
            android:textColor="@color/black"
            android:textSize="@dimen/home_txtSize_lblName"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5"
            android:weightSum="2">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <!--User's avatar-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/home_avt_user"
                    android:layout_gravity="center"
                    android:src="@drawable/user_default"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <!--Show current block-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/home_label_block"
                        android:textSize="@dimen/home_txtSize_lbl"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/home_txt_block"
                        android:text="@string/home_label_default_block"
                        android:textSize="@dimen/home_txtSize_lbl"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <!--Show user's course-->
                <!--Show current block-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/home_label_course"
                        android:textSize="@dimen/home_txtSize_lbl"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/home_txt_course"
                        android:text="@string/home_label_default_course"
                        android:textSize="@dimen/home_txtSize_lbl"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/home_label_default_code"
                        android:textSize="@dimen/home_txtSize_lbl"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/home_txt_code"
                        android:textSize="@dimen/home_txtSize_lbl"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--View show options-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:orientation="vertical"
        android:weightSum="3">
        <!--Row content: Info and Contact options-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">
            <!--INFO-->
            <LinearLayout
                android:id="@+id/home_option_info"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/home_info"
                android:layout_height="match_parent">
                <!--Icon-->
                <ImageView
                    android:src="@drawable/ic_student_info"
                    android:adjustViewBounds="true"
                    android:tint="@color/white"
                    android:layout_width="@dimen/home_icon_option_width"
                    android:layout_height="@dimen/home_icon_option_height" />
                <!--Label-->
                <TextView
                    android:text="@string/info"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/home_option_label"
                    android:layout_marginTop="@dimen/home_option_mrgTop_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!--Contact-->
            <LinearLayout
                android:id="@+id/home_option_schedule"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/home_contact"
                android:layout_height="match_parent">
                <!--Icon-->
                <ImageView
                    android:src="@drawable/ic_schedule"
                    android:adjustViewBounds="true"
                    android:tint="@color/white"
                    android:layout_width="@dimen/home_icon_option_width"
                    android:layout_height="@dimen/home_icon_option_height" />
                <!--Label-->
                <TextView
                    android:text="@string/news"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/home_option_label"
                    android:layout_marginTop="@dimen/home_option_mrgTop_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <!--Row content: Service-->
        <LinearLayout
            android:id="@+id/home_option_attendance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/home_service"
            android:weightSum="2">

            <!--Icon-->
            <ImageView
                android:src="@drawable/ic_attendance"
                android:adjustViewBounds="true"
                android:tint="@color/white"
                android:layout_width="@dimen/home_icon_option_width"
                android:layout_height="@dimen/home_icon_option_height" />

            <!--Label-->
            <TextView
                android:text="@string/attendance"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/home_option_label"
                android:layout_marginTop="@dimen/home_option_mrgTop_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!--Row content: Schedule and Attendance options-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">
            <!--SCHEDULE-->
            <LinearLayout
                android:id="@+id/home_option_Service"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/home_schedule"
                android:layout_height="match_parent">
                <!--Icon-->
                <ImageView
                    android:src="@drawable/ic_service"
                    android:adjustViewBounds="true"
                    android:tint="@color/white"
                    android:layout_width="@dimen/home_icon_option_width"
                    android:layout_height="@dimen/home_icon_option_height" />
                <!--Label-->
                <TextView
                    android:text="@string/service"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/home_option_label"
                    android:layout_marginTop="@dimen/home_option_mrgTop_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!--ATTENDANCE-->
            <LinearLayout
                android:id="@+id/home_option_contact"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/home_attendance"
                android:layout_height="match_parent">
                <!--Icon-->
                <ImageView
                    android:src="@drawable/ic_contact"
                    android:adjustViewBounds="true"
                    android:tint="@color/white"
                    android:layout_width="@dimen/home_icon_option_width"
                    android:layout_height="@dimen/home_icon_option_height" />
                <!--Label-->
                <TextView
                    android:text="@string/contact"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/home_option_label"
                    android:layout_marginTop="@dimen/home_option_mrgTop_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>